[package]
name = "todolist-app-mongodb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
mongodb = { version = "2.1", default-features = false, features = ["async-std-runtime"] }
